--- a/portfolio_react/src/index.css
+++ b/portfolio_react/src/index.css
@@ -34,3 +34,144 @@ body{
 .nav-connect:hover{
   transform: scale(1.05);
 }
+
+/*styling for hero component*/
+.hero{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 35px;
+}
+.hero img{
+  margin-top: 150px;
+}
+.hero h1{
+  text-align: center;
+  width: 70%;
+  font-size: 90px;
+  font-weight: 600;
+}
+.hero h1 span{
+  background:linear-gradient(270deg,#DF8908 10%, #B415FF 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.hero p{
+  width: 50%;
+  text-align: center;
+  font-size: 24px;
+  line-height: 40px;
+}
+.hero-action{
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+.hero-connect{
+  padding: 25px 45px;
+  border-radius: 50px;
+  background: linear-gradient(264deg,#DF8908  -5.09%,#B415FF 106.28%);
+  cursor: pointer;
+}
+.hero-resume{
+  padding: 25px 75px;
+  border-radius: 50px;
+  border: 2px solid #FFF;
+  cursor: pointer;
+}
+.hero-connect:hover{
+  border: 2px solid white;
+}
+.hero-resume:hover{
+  border-color: #B415FF;
+}
+
+/*styling for about me section*/
+.about{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  gap: 80px;
+  margin: 80px 170px;
+}
+.about-title{
+  position: relative;
+}
+.about-title h1{
+  padding: 0px 30px;
+  font-size: 80px;
+  font-weight: 600;
+}
+.about-title img{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+.about-sections{
+  display: flex;
+  gap: 80px;
+}
+.about-right{
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+.about-para{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-size: 24px;
+  font-weight: 500;
+}
+.about-skills{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.about-skill{
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  transition: 0.3s;
+}
+.about-skill p{
+  min-width: 150px;
+  font-size: 24px;
+  font-weight: 500;
+}
+.about-skill hr{
+  outline: none;
+  border: none;
+  width: 50%;
+  height: 8px;
+  border-radius: 50px;
+  background: linear-gradient(264deg,#DF8908 -5.09%, #B415FF 106.28%);
+}
+.about-skill:hover{
+  transform: scale(1.05);
+  transition: 0.3s;
+}
+
+/*styling for services  component*/
+.services{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  margin: 80px 170px;
+}
+.services-title{
+  position: relative;
+}
+.services-title h1{
+  padding: 0px 30px;
+  font-size: 80px;
+  font-weight: 600;
+}
