--- a/portfolio_react/src/index.css
+++ b/portfolio_react/src/index.css
@@ -1,8 +1,9 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-body{
+
+body {
   height: 100vh;
   background: #161513;
   color: white;
@@ -10,60 +11,92 @@ body{
 }
 
 /* styling for navbar component */
-.navbar{
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 20px 170px;
 }
-.nav-menu{
+
+.nav-menu {
   display: flex;
   align-items: center;
   list-style: none;
   gap: 50px;
   font-size: 20px;
 }
-.nav-connect{
+
+.nav-connect {
   padding: 20px 40px;
-  border-radius:50px;
-  background: linear-gradient(267deg,#DA7C25 0.36%,#B923E1 102.06%);
+  border-radius: 50px;
+  background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
   font-size: 22px;
   cursor: pointer;
   transition: 0.5s;
 }
-.nav-connect:hover{
+
+.nav-connect:hover {
   transform: scale(1.05);
+}
+.nav-menu li{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+.nav-menu li img{
+  display: flex;
+  margin: auto;
+}
+.anchor-link{
+  text-decoration: none;
+  color: white;
+}
+/*for responsive design*/
+@media(max-width:768px){
+  .navbar{
+    margin: 20px 50px;
+  }
+  .nav-connect{
+    display: none;
+  }
+  
 }
 
 /*styling for hero component*/
-.hero{
+.hero {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 35px;
 }
-.hero img{
+
+.hero img {
   margin-top: 150px;
 }
-.hero h1{
+
+.hero h1 {
   text-align: center;
   width: 70%;
   font-size: 90px;
   font-weight: 600;
 }
-.hero h1 span{
-  background:linear-gradient(270deg,#DF8908 10%, #B415FF 100%);
+
+.hero h1 span {
+  background: linear-gradient(270deg, #DF8908 10%, #B415FF 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.hero p{
+
+.hero p {
   width: 50%;
   text-align: center;
   font-size: 24px;
   line-height: 40px;
 }
-.hero-action{
+
+.hero-action {
   display: flex;
   align-items: center;
   gap: 25px;
@@ -71,95 +104,110 @@ body{
   font-weight: 500;
   margin-bottom: 50px;
 }
-.hero-connect{
+
+.hero-connect {
   padding: 25px 45px;
   border-radius: 50px;
-  background: linear-gradient(264deg,#DF8908  -5.09%,#B415FF 106.28%);
+  background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
   cursor: pointer;
 }
-.hero-resume{
+
+.hero-resume {
   padding: 25px 75px;
   border-radius: 50px;
   border: 2px solid #FFF;
   cursor: pointer;
 }
-.hero-connect:hover{
+
+.hero-connect:hover {
   border: 2px solid white;
 }
-.hero-resume:hover{
+
+.hero-resume:hover {
   border-color: #B415FF;
 }
 
 /*styling for about me section*/
-.about{
+.about {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   gap: 80px;
   margin: 80px 170px;
 }
-.about-title{
+
+.about-title {
   position: relative;
 }
-.about-title h1{
+
+.about-title h1 {
   padding: 0px 30px;
   font-size: 80px;
   font-weight: 600;
 }
-.about-title img{
+
+.about-title img {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: -1;
 }
-.about-sections{
+
+.about-sections {
   display: flex;
   gap: 80px;
 }
-.about-right{
+
+.about-right {
   display: flex;
   flex-direction: column;
   gap: 80px;
 }
-.about-para{
+
+.about-para {
   display: flex;
   flex-direction: column;
   gap: 20px;
   font-size: 24px;
   font-weight: 500;
 }
-.about-skills{
+
+.about-skills {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.about-skill{
+
+.about-skill {
   display: flex;
   gap: 50px;
   align-items: center;
   transition: 0.3s;
 }
-.about-skill p{
+
+.about-skill p {
   min-width: 150px;
   font-size: 24px;
   font-weight: 500;
 }
-.about-skill hr{
+
+.about-skill hr {
   outline: none;
   border: none;
   width: 50%;
   height: 8px;
   border-radius: 50px;
-  background: linear-gradient(264deg,#DF8908 -5.09%, #B415FF 106.28%);
+  background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
 }
-.about-skill:hover{
+
+.about-skill:hover {
   transform: scale(1.05);
   transition: 0.3s;
 }
 
 /*styling for services  component*/
-.services{
+.services {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -167,11 +215,334 @@ body{
   gap: 80px;
   margin: 80px 170px;
 }
-.services-title{
+
+.services-title {
   position: relative;
 }
-.services-title h1{
+
+.services-title h1 {
   padding: 0px 30px;
   font-size: 80px;
   font-weight: 600;
+}
+
+.services-title img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.services-format {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  padding: 60px;
+  border-radius: 10px;
+  border: 2px solid white;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.services-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  margin-bottom: 80px;
+}
+
+.services-format h3 {
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.services-format h2 {
+  font-size: 38px;
+  font-weight: 800;
+  background: linear-gradient(270deg, #DF8908 50%, #B415FF 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.services-format p {
+  color: #d4d4d4;
+  font-size: 24px;
+  line-height: 40px;
+  max-width: 300px;
+}
+
+.services-readmore {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.services-format:hover {
+  border: 2px solid #ff00ff;
+  background-image: linear-gradient(45deg, #3f0028, #582300);
+  transform: scale(1.05);
+  transition: 0.4s;
+}
+
+
+/*styling for my work component*/
+.mywork {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  margin: 80px 170px;
+}
+
+.mywork-title {
+  position: relative;
+}
+
+.mywork-title h1 {
+  padding: 0px 30px;
+  font-size: 80px;
+  font-weight: 600;
+}
+
+.mywork-title img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.mywork-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+}
+
+.mywork-container img {
+  box-sizing: border-box;
+  width: 419px;
+  height: 280px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.mywork-container img:hover {
+  transform: scale(1.10);
+  border: 4px solid #ff00ff;
+  border-radius: 10px;
+  transition: 0.3s;
+}
+
+.mywork-showmore {
+  display: flex;
+  gap: 15px;
+  border-radius: 50px;
+  border: 2px solid white;
+  padding: 30px 60px;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 80px;
+  transition: 0.6s;
+  cursor: pointer;
+}
+
+.mywork-showmore:hover {
+  gap: 30px;
+  transition: 0.6s;
+}
+
+/*styling for contact section*/
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 80px;
+  margin: 80px 170px;
+}
+
+.contact-title {
+  position: relative;
+}
+
+.contact-title h1 {
+  padding: 0px 30px;
+  font-size: 80px;
+  font-weight: 600;
+}
+
+.contact-title img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.contact-section {
+  display: flex;
+  gap: 150px;
+}
+
+.contact-left {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.contact-left h1 {
+  font-size: 80px;
+  font-weight: 700;
+  background: linear-gradient(270deg, #DF8908 80%, #B415FF 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.contact-left p {
+  max-width: 550px;
+  color: #D8D8D8;
+  font-size: 20px;
+  line-height: 35px;
+}
+
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  color: #D8D8D8;
+  font-size: 22px;
+}
+
+.contact-detail {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.contact-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+.contact-right label {
+  color: #D8D8D8;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.contact-right input {
+  border: none;
+  width: 700px;
+  height: 78px;
+  padding-left: 20px;
+  border-radius: 4px;
+  background: #32323c;
+  color: #A0A0A0;
+  font-family: Outfit;
+  font-size: 20px;
+}
+
+.contact-right textarea {
+  width: 650px;
+  border: none;
+  padding: 25px;
+  border-radius: 4px;
+  background: #32323c;
+  color: #A0A0A0;
+  font-family: Outfit;
+  font-size: 20px;
+}
+
+.contact-submit {
+  border: none;
+  color: white;
+  border-radius: 50px;
+  background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
+  font-size: 22px;
+  padding: 20px 60px;
+  margin-bottom: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.contact-submit:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+/*styling for footer section*/
+.footer {
+  margin: 50px 170px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-top-left p {
+  font-size: 20px;
+  max-width: 400px;
+}
+
+.footer-top-right {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+
+.footer-email-input {
+  display: flex;
+  gap: 30px;
+  padding: 20px 30px;
+  border-radius: 50px;
+  background: #32323B;
+  padding-right: 80px;
+}
+
+.footer-email-input input {
+  outline: none;
+  border: none;
+  background: transparent;
+  color: #A0A0A0;
+  font-family: Outfit;
+  font-size: 18px;
+}
+
+.footer-subscribe {
+  font-size: 20px;
+  padding: 22px 50px;
+  border-radius: 50px;
+  background: linear-gradient(264deg, #DF8908 -5.09%, #B415FF 106.28%);
+  cursor: pointer;
+  transition: 0.3s;
+  color: #FFF;
+  font-weight: 600;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+}
+
+.footer-bottom-right {
+  display: flex;
+  gap: 50px;
+  margin-bottom: 50px;
+}
+.footer-email-input:hover{
+  border: 2px solid white;
+}
+.footer-subscribe:hover{
+  transform: scale(1.1);
+  transition: 0.3s;
 }
