--- a/portfolio_react/src/index.css
+++ b/portfolio_react/src/index.css
@@ -65,7 +65,7 @@ body {
 }
 
 /*for responsive design*/
-@media(max-width:768px) {
+@media(max-width:720px) {
   .navbar {
     margin: 20px 50px;
   }
@@ -119,7 +119,10 @@ body {
 }
 
 .hero img {
-  margin-top: 150px;
+  margin-top: 70px;
+  height: 20%;
+  width: 20%;
+  border-radius: 30% 30%;
 }
 
 .hero h1 {
@@ -174,7 +177,7 @@ body {
   border-color: #B415FF;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .hero img {
     margin-top: 120px;
     width: 260px;
@@ -248,6 +251,11 @@ body {
   flex-direction: column;
   gap: 80px;
 }
+.about-left img{
+  height: 400px;
+  width: 320px;
+  margin-top: 20px;
+}
 
 .about-para {
   display: flex;
@@ -290,7 +298,7 @@ body {
   transition: 0.3s;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .about {
     gap: 80px;
     margin: 50px 70px;
@@ -415,7 +423,7 @@ body {
   transition: 0.4s;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .services {
     margin: 20px 70px;
     align-items: start;
@@ -434,7 +442,7 @@ body {
 
   .services-format {
     gap: 20px;
-    padding: 32px;
+    padding: 25px;
   }
 
   .services-format h2 {
@@ -453,7 +461,7 @@ body {
 
   .services-container {
     grid-template-columns: 1fr 1fr;
-    gap: 30px;
+    gap: 20px;
   }
 }
 
@@ -532,16 +540,16 @@ body {
   transition: 0.6s;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .mywork {
-    gap: 50px;
+    gap: 20px;
     margin: 50px 70px;
     align-items: start;
   }
 
   .mywork-title h1 {
     padding: 0;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
   }
 
@@ -549,17 +557,21 @@ body {
     width: 130px;
     margin-right: -20px;
   }
+  .mywork-container p{
+    font-size: 18px;
+    padding-top:0;
+    margin: 0;
+  }
 
   .mywork-container {
     grid-template-columns: 1fr 1fr;
-    gap: 30px;
+    gap: 50px;
   }
 
   .mywork-container img {
     width: 100%;
     height: 100%;
-  }
-
+  } 
   .mywork-showmore {
     padding: 20px 40px;
     margin: 50px auto;
@@ -691,8 +703,9 @@ body {
 
 .social-icons {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   font-size: 80px;
+  gap: 50px;
 }
 
 .social-icons a {
@@ -706,7 +719,7 @@ body {
   transition: 0.5s;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .contact {
     gap: 50px;
     margin: 50px 70px;
@@ -726,10 +739,11 @@ body {
 
   .contact-section {
     flex-direction: column;
+    gap: 60px;
   }
 
   .contact-left h1 {
-    font-size: 54px;
+    font-size: 40px;
   }
 
   .contact-left p {
@@ -749,18 +763,21 @@ body {
   }
 
   .contact-right input {
-    width: 100%;
+    width: 90%;
     font-size: 20px;
   }
 
   .contact-right textarea {
-    width: 95%;
+    width: 90%;
     font-size: 20px;
   }
 
   .contact-submit {
     font-size: 20px;
     padding: 15px 40px;
+  }
+  .social-icons{
+    font-size: 60px;
   }
 }
 
@@ -838,7 +855,7 @@ body {
   transition: 0.3s;
 }
 
-@media(max-width:768px) {
+@media(max-width:720px) {
   .footer {
     margin: 50px 70px;
   }
@@ -846,6 +863,9 @@ body {
   .footer-top {
     flex-direction: column;
     gap: 50px;
+  }
+  .footer-top-right{
+    display: none;
   }
 
   .footer-bottom {
