--- a/portfolio_react/src/index.css
+++ b/portfolio_react/src/index.css
@@ -69,23 +69,25 @@ body {
   .navbar {
     margin: 20px 50px;
   }
-
+  .logo{
+    height: 90px;
+  }
   .nav-connect {
     display: none;
   }
 
   .nav-mob-open {
     display: block;
-    position: fixed;
-    right: 30px;
+    position: absolute;
+    right: 0;
   }
 
   .nav-mob-close {
     display: block;
     position: relative;
-    top: 30px;
-    left: 290px;
-    width: 30px;
+    top: 20px;
+    left: 210px;
+    width: 25px;
   }
 
   .nav-menu {
@@ -95,16 +97,15 @@ body {
     top: 0;
     gap: 30px;
     background-color: #1F0016;
-    width: 350px;
+    width: 250px;
     height: 100%;
     z-index: 2;
     transition: right 0.5s;
     right: -350px;
   }
-
   .nav-menu li {
     font-size: 30px;
-    padding-left: 100px;
+    padding-left: 70px;
     flex-direction: row;
     gap: 20px;
   }
@@ -186,7 +187,7 @@ body {
   .hero h1 {
     margin-top: 50px;
     width: 90%;
-    font-size: 50px;
+    font-size: 45px;
   }
 
   .hero p {
@@ -204,13 +205,15 @@ body {
   }
 
   .hero-connect {
-    padding: 20px 20px;
+    padding: 15px 15px;
     border-radius: 40px;
+    font-size: 20px;
   }
 
   .hero-resume {
-    padding: 20px 50px;
+    padding: 20px 20px;
     border-radius: 40px;
+    font-size: 20px;
   }
 }
 
@@ -432,7 +435,7 @@ body {
 
   .services-title h1 {
     padding: 0;
-    font-size: 50px;
+    font-size: 40px;
   }
 
   .services-title img {
@@ -441,8 +444,8 @@ body {
   }
 
   .services-format {
-    gap: 20px;
-    padding: 25px;
+    gap: 15px;
+    padding: 10px;
   }
 
   .services-format h2 {
@@ -549,7 +552,7 @@ body {
 
   .mywork-title h1 {
     padding: 0;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 600;
   }
 
@@ -558,24 +561,24 @@ body {
     margin-right: -20px;
   }
   .mywork-container p{
-    font-size: 18px;
+    font-size: 14px;
     padding-top:0;
     margin: 0;
   }
 
   .mywork-container {
     grid-template-columns: 1fr 1fr;
-    gap: 50px;
+    gap: 70px;
   }
 
   .mywork-container img {
-    width: 100%;
+    width: 170%;
     height: 100%;
   } 
   .mywork-showmore {
-    padding: 20px 40px;
-    margin: 50px auto;
-    font-size: 18px;
+    padding: 20px 20px;
+    margin: 40px auto;
+    font-size: 15px;
     cursor: pointer;
   }
 }
@@ -728,7 +731,7 @@ body {
 
   .contact-title h1 {
     padding: 0;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
   }
 
@@ -764,20 +767,23 @@ body {
 
   .contact-right input {
     width: 90%;
+    height: 60px;
     font-size: 20px;
   }
 
   .contact-right textarea {
-    width: 90%;
+    width: 80%;
     font-size: 20px;
   }
-
+  hr{
+    width: 135%;
+  }
   .contact-submit {
-    font-size: 20px;
+    font-size: 15px;
     padding: 15px 40px;
   }
   .social-icons{
-    font-size: 60px;
+    font-size: 45px;
   }
 }
 
